--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -181,6 +181,7 @@ nav {
 
   @media (max-width: 800px) {
     padding: 5.5rem $app-x-padding 2rem $app-x-padding;
+    margin-bottom: 1rem;
   }
 
   display: flex;
@@ -191,6 +192,7 @@ nav {
     font-size: 7.5vw;
     @media (max-width: 800px) {
       font-size: 5.5vw;
+      padding-bottom: 10px;
     }
     display: flex;
     align-items: center;
